--- a/simulator/package.json
+++ b/simulator/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
     "@types/node": "^20.3.3",
+    "@types/source-map-support": "^0.5.7",
     "source-map-support": "^0.5.21",
     "typescript": "^5.1.6"
   }
