use auth grpc to validate jwt

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,4 @@ DATABASE_CONNECTION_POOL_URL=...
 GOOGLE_APPLICATION_CREDENTIALS_CONTENT=...
 OSR_API_KEY=...
 FIREBASE_PROJECT_ID=...
+AUTH_GRPC_URL=localhost:7101
