--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.8",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@mui/icons-material": "^5.13.7",
+    "@mui/joy": "^5.0.0-beta.5",
     "@mui/material": "^5.13.7",
     "@tanstack/react-query": "^4.29.19",
     "date-fns": "^2.30.0",
+    "firebase": "^10.3.1",
     "jotai": "^2.2.2",
     "leaflet": "^1.9.4",
     "leaflet-rotatedmarker": "^0.2.0",
