--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 VITE_API_BASE_URL=https://uber-clone-backend.fly.dev
+VITE_SIM_BASE_URL=https://uber-clone-simulator.fly.dev
 VITE_FIREBASE_API_KEY=AIzaSyCnDX1h8RvsSva3wM0wBahaFDEuR0czK2g
