--- a/simulator/package.json
+++ b/simulator/package.json
@@ -19,9 +19,11 @@
     "express": "^4.18.2",
     "firebase": "^9.23.0",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "source-map-support": "^0.5.21"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.4.9",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/morgan": "^1.9.4",
