--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -7,8 +7,7 @@ app = "uber-clone-backend"
 primary_region = "ams"
 
 [build]
-builder = "paketobuildpacks/builder:base"
-buildpacks = ["gcr.io/paketo-buildpacks/go"]
+dockerfile = "Dockerfile"
 
 [env]
 PORT = "8080"
@@ -16,10 +15,6 @@ ENV = "prod"
 
 [http_service]
 internal_port = 8080
-force_https = true
-auto_stop_machines = true
-auto_start_machines = true
-min_machines_running = 0
 
 [checks]
 [checks.http]
