--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -15,6 +15,9 @@ ENV = "prod"
 
 [http_service]
 internal_port = 8080
+force_https = true
+auto_stop_machines = true
+auto_start_machines = true
 
 [checks]
 [checks.http]
